# FEAutils

./: .gitignore  LICENSE  README.md  publish  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
FEAutils/: __init__.py  demand_profiles.py  general.py  plotting.py  timeseries.py
data/: desktop.ini
feautils/: demand_profiles.py  general.py  plotting.py
feautils1/: general.py  plotting.py  timeseries.py
