[tool.poetry]
name = "feautils"
version = "0.0.8"
description = ""
authors = ["Clem <clem@futureenergy.associates>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
requests = "^2.32.3"
matplotlib = "^3.10.0"
numpy = "^2.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
pytest = "^8.2.2"
ruff = "^0.8.4"
pandas-stubs = "^2.2.3.241126"
types-pyyaml = "^6.0.12.20240917"
types-tqdm = "^4.67.0.20241119"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E731"]
